# rush

./: .gitignore  .gitmodules  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  acinclude.m4  bootstrap  bootstrap.conf  configure.ac  gnulib.modules  paths
doc/: .gitignore  Config  Makefile.am  gendocs_template  html.init  rush-po.1  rush.1  rush.8  rush.info  rush.rc.5  rush.texi  rushlast.1  rushwho.1  strftime.texi  version.texi
etc/: Makefile.am  rush.rc
lib/: .gitignore  Makefile.am  argcv.c  argcv.h  i18n.c  librush.h  logwtmp.c  progname.c  readfmt.c  rushdb.c  slist.c  utmp.c  version.c  wildmatch.c  wordsplit.c  wordsplit.h  wtmp.c
po/: .gitignore  POTFILES.in
src/: .gitignore  Makefile.am  argcv.c  argcv.h  cf.c  cf.h  cfck.c  cfgram.y  cflex.l  config.c  defconf.sed  dump.c  getopt.m4  limits.c  map.c  rlopt.opt  rush-po  rush-po.awk  rush.c  rush.h  rushlast.c  rushopt.opt  rushwho.c  rwopt.opt  slist.c  socket.c  transform.c
tests/: .gitignore  Makefile.am  and.at  argc.at  atlocal.in  backref.at  chdir.at  clrenv.at  command.at  compound.at  delete.at  env.at  error.at  evalenv.at  fallthrough.at  fstest.at  gid.at  group.at  in.at  inc00.at  inc01.at  insert.at  interactive.at  keepenv.at  lex.at  map.at  match.at  matcharg.at  matchprog.at  mksock.c  myid.c  newgrp.at  null.at  or.at  qstr.at  regexp.at  remopt.at  set.at  setenv.at  setvar.at  (+8 more)
tests/legacy/: argc.at  backref.at  chdir.at  command.at  delete.at  env.at  error.at  fallthrough.at  gid.at  interactive.at  map.at  match.at  matchprog.at  newgrp.at  set.at  setvar.at  transform.at  uid.at  umask.at  unsetvar.at
